# py3dinterpolations

./: .flake8  .gitignore  404.html  LICENSE  README.md  REVIEW.md  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  requirements.txt  setup.py  sitemap.xml
.github/workflows/: documentation.yml  documentation_lint.yml  documentation_prechecks.yml  gh-pages-safety.yml  linting.yml  python-publish.yml  tests.yml  todo_issues.yml  versioning.yml  versioning_checks.yml
docs/: .buildinfo  genindex.html  index.html  index.md  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_autosummary/: py3Dinterpolations.core.create_regulargrid3d_from_griddata.html  py3Dinterpolations.core.grid3d.Grid3D.html  py3Dinterpolations.core.grid3d.RegularGrid3D.html  py3Dinterpolations.core.grid3d.html  py3Dinterpolations.core.griddata.GridData.html  py3Dinterpolations.core.griddata.GridDataSpecs.html  py3Dinterpolations.core.griddata.html  py3Dinterpolations.core.html  py3Dinterpolations.html  py3Dinterpolations.modelling.html  py3Dinterpolations.modelling.interpolate.html  py3Dinterpolations.modelling.interpolation.Interpolator3D.html  py3Dinterpolations.modelling.interpolation.html  py3Dinterpolations.modelling.modeler.Modeler3D.html  py3Dinterpolations.modelling.modeler.html  py3Dinterpolations.modelling.models.InverseDistanceWeighting.html  py3Dinterpolations.modelling.models.ModelsWrapper.html  py3Dinterpolations.modelling.models.deterministic.DeterministicModel.html  py3Dinterpolations.modelling.models.deterministic.html  py3Dinterpolations.modelling.models.get_model_type.html  py3Dinterpolations.modelling.models.html  py3Dinterpolations.modelling.models.idw.IDW.html  py3Dinterpolations.modelling.models.idw.html  py3Dinterpolations.modelling.preprocessing.Preprocessing.html  py3Dinterpolations.modelling.preprocessing.html  py3Dinterpolations.modelling.preprocessing.reverse_preprocessing.html  py3Dinterpolations.plotting.html  py3Dinterpolations.plotting.plotting.html  py3Dinterpolations.plotting.plotting.plot_3d_model.html  py3Dinterpolations.plotting.plotting.plot_downsampling.html  py3Dinterpolations.plotting.plotting.plot_model_epsilon.html  py3dinterpolations.core.create_regulargrid3d_from_griddata.html  py3dinterpolations.core.grid3d.Grid3D.html  py3dinterpolations.core.grid3d.GridAxis.html  py3dinterpolations.core.grid3d.RegularGrid3D.html  py3dinterpolations.core.grid3d.create_regulargrid3d_from_griddata.html  py3dinterpolations.core.grid3d.html  py3dinterpolations.core.griddata.GridData.html  py3dinterpolations.core.griddata.GridDataSpecs.html  py3dinterpolations.core.griddata.html  (+30 more)
docs/_sources/: index.rst.txt
docs/assets/: 3d_plot.html
docs/examples/: estimator.html  estimator.ipynb  preprocessing.html  preprocessing.ipynb  quickstart.html  quickstart.ipynb
docs/getting-started/: installation.md  quickstart.md
docs/guide/: models.md  preprocessing.md  visualization.md
docs/models/: idw.html  idw.ipynb  kriging.html  kriging.ipynb
docsrc/: requirements.txt
docsrc/source/: conf.py  index.rst
py3Dinterpolations/: __init__.py
py3dinterpolations/: __init__.py
reference/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
tests/: conftest.py
(+179 files in other folders)
