[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py3dinterpolations"
version = "1.0.0"
description = "quick 3D interpolation with python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Giorgio Caizzi", email = "giocaizzi@gmail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "pykrige>=1.7",
    "scikit-learn>=1.3",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pandas-stubs>=2.0",
]
docs = ["mkdocs-material>=9.0", "mkdocstrings[python]>=0.25"]

[project.urls]
Documentation = "https://giocaizzi.github.io/py3dinterpolations/"
"Bug Reports" = "https://github.com/giocaizzi/py3dinterpolations/issues"
Source = "https://github.com/giocaizzi/py3dinterpolations"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "pykrige.*",
    "plotly.*",
    "mpl_toolkits.*",
    "sklearn.*",
    "shapely.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=./py3dinterpolations --cov-report=xml --cov-report=html"
markers = ["wip: WORK IN PROGRESS"]
